--- a/www/manifest.json
+++ b/www/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My Ionic App",
-  "short_name": "My Ionic App",
+  "name": "Vetways",
+  "short_name": "Vetways",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
